--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>axiom</artifactId>
             <version>1.2.11.wso2v11</version>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.orbit.org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.60.0.wso2v1</version>
+        </dependency>
     </dependencies>
 
     <repositories>
